app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: classifier-api
  labels:
    app: classifier-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: classifier-api
  template:
    metadata:
      labels:
        app: classifier-api
    spec:
      containers:
        - name: classifier-app
          image: taihim18/resnet-classifier:latest
          ports:
            - name: web
              containerPort: 8000
          resources:
            requests:
              cpu: 500m
            limits:
              cpu: 800m
