prom-adap.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: prometheus-adapter
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2024-07-04T15:43:24Z"
  labels:
    app.kubernetes.io/component: metrics
    app.kubernetes.io/instance: prometheus-adapter
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prometheus-adapter
    app.kubernetes.io/part-of: prometheus-adapter
    app.kubernetes.io/version: v0.11.2
    helm.sh/chart: prometheus-adapter-4.10.0
  name: prometheus-adapter
  namespace: default
  resourceVersion: "40119"
  uid: c261d866-c293-4cd6-aaf3-20eb5222f717
spec:
  clusterIP: 10.105.166.11
  clusterIPs:
  - 10.105.166.11
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/instance: prometheus-adapter
    app.kubernetes.io/name: prometheus-adapter
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
