app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: test.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: classifier-api
                port:
                  number: 8000
